--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 .idea/workspace.xml
+.idea/find-the-missing-code.iml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
