--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .idea/modules.xml
 .idea/vcs.xml
 .idea/inspectionProfiles/Project_Default.xml
+.idea/workspace.xml___jb_tmp___
+.idea/workspace.xml___jb_old___
